# simlab

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile.gui  Dockerfile.master-node  Dockerfile.mo-engine  Dockerfile.pareto-analysis  Dockerfile.rest-api  README.md  README_pt.md  docker-compose.yaml  gdcc.py  telegraf.conf
pylib/: README.md  benchmarks.py  cooja_files.py  data_analysis.py  dto.py  files.py  json_encoder.py  mongo_db.py  parse_json_pos.py  plot_network.py  pyproject.toml  pytest.ini  replace_xml.py  service_settings.py  sim_transform.py  specific_nb_plot.py  statistics.py  visual.py
pylib/config/: algorithm.py  problems.py  simulator.py
pylib/cooja_builder/: csv_converter.py  parse_json_pos_dat.py  replace_xml.py
pylib/db/: __init__.py  connection.py  factory.py  gridfs.py
pylib/db/models/: __init__.py  campaign.py  enums.py  experiment.py  generation.py  genome_cache.py  individual.py  problem.py  simulation.py  source.py  ssh_worker.py
pylib/db/repositories/: analytics.py  campaign.py  experiment.py  generation.py  genome_cache.py  individual.py  problem.py  simulation.py  source.py  ssh_worker.py
pylib/dto/: algorithm.py  database.py  experiment.py  problems.py  simulation.py  simulator.py
pylib/mongo/: analytics.py  batch.py  connection.py  enums.py  experiment.py  generation.py  gridfs_handler.py  simulation.py  source.py
pylib/telemetry/: __init__.py  artifact.py  collector.py  prometheus.py  watcher.py
pylib/tests/: test_benchmarks.py  test_experiment_repository.py  test_plot_network.py  test_statistics.py  test_telemetry.py
(+366 files in other folders)
